# suture

./: Cargo.toml  README.md
src/: format.rs  lib.rs  metadata.rs  patch.rs  sink.rs  target.rs
src/cli/: apply.rs  backup.rs  diff.rs  inspect.rs  io_helpers.rs  mod.rs
tests/: cli.rs  guardrails.rs  in_place.rs  snapshots.rs
tests/common/: mod.rs
tests/snapshots/: cli__inspect_text_diff.snap  snapshots__snapshot_display_digest_mismatch_error.snap  snapshots__snapshot_display_length_mismatch_error.snap  snapshots__snapshot_display_out_of_bounds_error.snap  snapshots__snapshot_display_out_of_order_error.snap  snapshots__snapshot_display_overlap_build_error.snap  snapshots__snapshot_extend_via_end_insert.snap  snapshots__snapshot_in_place_write_on_corpus.snap  snapshots__snapshot_length_changing_splice.snap  snapshots__snapshot_mixed_patch_on_corpus.snap  snapshots__snapshot_pure_delete_shrinks_tail.snap  snapshots__snapshot_pure_insert_shifts_tail.snap  snapshots__snapshot_serde_json_round_trip_fidelity.snap  snapshots__snapshot_serde_json_shape_of_mixed_patch_with_metadata.snap  snapshots__snapshot_truncate_via_trailing_delete.snap
