[package]
name = "suture"
version = "0.2.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "In-memory binary patches: ordered length-preserving byte writes over a base buffer, with optional source-material verification."
repository = "https://github.com/landaire/suture"
keywords = ["patch", "binary", "diff", "edit", "overlay"]
categories = ["data-structures", "encoding"]

[[bin]]
name = "suture"
path = "src/bin/suture.rs"
required-features = ["cli"]

[dependencies]
blake3 = { version = "1.8.4", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
rkyv = { version = "0.8.16", default-features = false, features = ["alloc", "bytecheck"], optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
sha2 = { version = "0.11.0", optional = true }
similar = { version = "2.6", optional = true }
zstd = { version = "0.13", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
insta = { version = "1.43", features = ["filters"] }
predicates = "3.1"
serde_json = "1.0.149"
tempfile = "3.14"

[features]
default = []
serde = ["dep:serde"]
rkyv = ["dep:rkyv"]
blake3 = ["dep:blake3"]
sha2 = ["dep:sha2"]
cli = ["dep:clap", "dep:similar", "dep:zstd", "rkyv", "blake3"]
